[package]
name = "zwnbsp"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Zero with no-break space utils"
readme = "../README.md"
repository = "https://github.com/EstebanBorai/zwnbsp"
categories = []

[lib]
name = "zwnbsp"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
