[package]
name = "zwnbsp"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Zero width no-breaking space character utilities for Unicode and HTML"
readme = "../README.md"
repository = "https://github.com/EstebanBorai/zwnbsp"
categories = [
  "algorithms",
  "encoding",
  "parsing",
]

[lib]
name = "zwnbsp"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
